fix: use contract for auth endpoints
